- Added 'importupload' to managed rights
==========
REL1_10_7: (released 11July2007)
- SecureProperties: added global variable 'get' and 'set' operations
- ParserPhase2: fixed an issue with $wgParser not setting mTitle property when needed
- Added 'NS_INTERWIKI' accessible to '*'
- Fixed page history for revision level policing
- ForeachFunction: added security through only allowing 'protected' pages
- ForeachFunction: added 'array of arrays' iteration capability
- Added 'PermissionFunctions' extension
- Added 'NamespaceFunctions' extension
- Added 'StubManager' extension
- Fixed small bug (non core, just when Special:Version is viewed in a particular case) in RawRight
- Added 'EmailLog' extension
- Added 'UserSettingsChanged' hook in User.php (used for logging functionality)
- Adjusted 'Log/emaillog' browse right for '*' group
- Added 'ReCaptcha' plug-in -- requires customization to the target site where BizzWiki is deployed.
==========
REL1_10_8: (released ...)
##TODO 'UserSettingsChangedLog': log entries created outside of 'Special:Preferences' context.
- Adjusted ViewsourceRight: accomodate more PHP versions (no functional change)
- Adjusted FileSystemSyntaxColoring : accomodate more PHP versions (no functional change)
- Adjusted ShowRedirectPageText: accomodate more PHP versions (no functional change)
- Adjusted SidebarEx: accomodate more PHP versions (no functional change)
- Adjusted AddScriptCss: accomodate more PHP versions (no functional change)
- Adjusted AddScriptCss: accomodate more PHP versions (no functional change)
- Adjusted PageFunctions: accomodate more PHP versions (no functional change)
- HierarchicalNamespacePermissions: added page level restrictions enforcement
- Added 'PageRestrictions' extension: adds 'read' right enforcement at the page level etc.
- Added 'disable' command in ParserPhase2 (addresses documentation case in NS_FILESYSTEM) (!)
- Added 'WatchLog' extension
- 